<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmarDatos"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloConfirmar"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        />
    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="30dp"
        android:text="@string/confirmarNombre"
    />
    <TextView
        android:id="@+id/tvFechaNac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvNombre"
        android:layout_marginTop="30dp"
        android:text="@string/confirmarFecha"
        />
    <TextView
        android:id="@+id/tvTel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFechaNac"
        android:layout_marginTop="30dp"
        android:text="@string/confirmarTel"
        />
    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTel"
        android:layout_marginTop="30dp"
        android:text="@string/confirmarTel"
        />
    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvEmail"
        android:layout_marginTop="30dp"
        android:text="@string/confirmarDesc"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEditar"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:layout_below="@+id/tvDescripcion"
        android:onClick="atras"/>
</RelativeLayout>